samples/_failures_safe/1761704789_16e2b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01f20e10.c: In function ‘main’:
./samples/SAFE/__tmp_01f20e10.c:162:5: error: expected declaration or statement at end of input
  162 |     if (word_count == 0) {
      |     ^~
./samples/SAFE/__tmp_01f20e10.c:162:5: error: expected declaration or statement at end of input
